Updated Meta title and description

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Malcolm Barnes provides SEO and web development in Houston, TX.">
+    <title>Malcolm Barnes | SEO Developer | Marketing and Media</title>
 </head>
 <body>
-    <h1>Malcolm's Portfolio</h1>
-    
+    <h1>Malcolm Barnes</h1>
 </body>
 </html>
