--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <!--Stylesheets-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css" type="text/css">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Rajdhani:wght@400;500;700&display=swap" rel="stylesheet">
     <!--Bootstrap JS-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
-<body>
-    <header class="header">
+<header>
     <!-- Navigation begins     <nav class="navbar navbar-expand-lg navbar-light bg-light bd-navbar">
   -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-navbar">
     <a class="navbar-brand" href="#">
-      <img src="./assets/images/MB_logo_fb pg img.png" width="36" height="36" class="d-inline-block align-top" alt="">
+      <img src="./assets/images/MB_logo_fb pg img.png" width="36" height="36" class="d-inline-block align-top" alt="malcolm barnes technology houston">
       Malcolm<b>Barnes</b>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+            <a class="nav-link ft-color" href="./index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class= "nav-link" href="./portfolio.html">Portfolio</a>
@@ -41,17 +42,26 @@
       </div>
     </nav>
     <!-- Navigation ends-->
-    </header>
-    
-    <section class="container-fluid">
-        <div class="container">
-            <h1>About Me</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Veniam cupiditate ut officia exercitationem cumque dignissimos 
-                accusantium illo debitis quod excepturi facere ipsum, repellendus 
-                pariatur quaerat saepe facilis ipsa unde in!</p>
-        </div>
-    </section>
-    <footer class="footer">I am a footer</footer>
-</body>
+</header>
+  <body>
+    <main class="container-fluid">
+      <section class="container">
+          <p id="headline">Welcome! I am Malcolm. <br> Developer, Designer, & Marketer</p>
+          <img src="./assets/images/malcolm-barnes-developer.png" class="rounded float-right" alt="malcolm barnes seo developer">
+          <p>As an IT professional of over 15 years, 
+              I am familiar with the benefits and the challenges 
+              that technology can bring to the workplace. With the last 5 years
+               in the digital marketing and design space, I have gained an aesthetic and analytical perspective. 
+              As I expand into web development, I will bring my skills in marketing and design to create 
+          and help create applications in the marketing space. </p>
+          <ul>
+              <li><strong>University of Houston</strong> - BS, Digital Media Design ('17)</li>
+              <li><strong>University of Texas</strong> - Certificate, Web Development (<em>In-progress</em>)</li>
+          </ul>
+      </section>
+    </main>
+    <footer class="py-4 bg-dark text-white-50 py-5 fixed-bottom">
+      <small>Copyright 2020 &copy; Malcolm Barnes Tech</small>
+    </footer>
+  </body>
 </html>
