Cards added for each service to be offered. Next steps include editing description, images, and button colors

--- a/index.html
+++ b/index.html
@@ -45,10 +45,52 @@
 </header>
   <body>
     <main class="container-fluid">
-      <section class="container">
-          <p id="headline">Welcome! I am Malcolm. <br> Developer, Designer, & Marketer</p>
+        <div class="col tagline">
+        <p>Providing Results-driven Solutions from Ideation to Execution</p>
+        </div>
+      </div>
+    <!--Services-->
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Web Development</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Technical Marketing</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Digital Media</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Main Content-->
+      <section class="container intro">
+          <h1 id="headline">Seeking Entry Level Software Developer Jobs in Houston, TX</h1>
           <img src="./assets/images/malcolm-barnes-developer.png" class="rounded float-right" alt="malcolm barnes seo developer">
-          <p>As an IT professional of over 15 years, 
+          <p>Welcome to my site! I'm Malcolm Barnes. As a recent graduate of the 
+            University of Texas Coding Bootcamp, I am seeking <b>entry level software developer jobs in Houston, TX</b>. 
+            <br><br>As an IT professional of over 15 years, 
               I am familiar with the benefits and the challenges 
               that technology can bring to the workplace. With the last 5 years
                in the digital marketing and design space, I have gained an aesthetic and analytical perspective. 
