--- a/index.html
+++ b/index.html
@@ -49,58 +49,83 @@
         <p>Providing Results-driven Solutions from Ideation to Execution</p>
         </div>
       </div>
-    <!--Services-->
-    <div class="container">
+    <!--Main Content-->
+      <section class="container-lg intro">
+          <h1 id="headline">Seeking Entry Level Web Developer Jobs in Houston, TX</h1>
+          <img src="./assets/images/malcolm-barnes-developer.png" class="rounded float-right" alt="malcolm barnes seo developer">
+          <p>Welcome to my site! I'm Malcolm Barnes. As a recent graduate of the 
+            University of Texas Coding Bootcamp, I am seeking <b>entry level web developer jobs in Houston, TX</b>.</p>
+            <div class="row">
+              <div class="col">
+              <p>As an IT professional of over 15 years, 
+              I am familiar with the benefits and the challenges 
+              that technology can bring to the workplace. With the last 5 years
+               in the digital marketing and design space, I have gained an aesthetic and analytical perspective. 
+              As I expand into web development, I will bring my skills in marketing and design to create 
+          and help create applications in the technology space.</p>
+              </div>
+            <div class="col">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col row-tb"></th>
+                    <th scope="col">Web Development</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row row-tb"></th>
+                    <td>Responsive Design</td>
+                  </tr>
+                  <tr>
+                    <th scope="row row-tb"></th>
+                    <td>Semantic Structure</td>
+                  </tr>
+                  <tr>
+                    <th scope="row row-tb"></th>
+                    <td>MERN Stack</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            </div> 
+      </section>
+      <!--Services-->
+    <div class="container services">
       <div class="row">
+        <div id="headline" class="container btn-headline">Click below to view my portfolio:</div>
         <div class="col-sm">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./assets/images/code-img3-for-portfolio.png" class="card-img-top" alt="web developer">
             <div class="card-body">
               <h5 class="card-title">Web Development</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">From simple mini-sites to complex data-driven web applications.</p>
+              <a href="portfolio.html" class="btn btn-primary">View examples</a>
             </div>
           </div>
         </div>
         <div class="col-sm">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./assets/images/digital-marketing-img2-for-portfolio.png" class="card-img-top" alt="technical seo houston">
             <div class="card-body">
               <h5 class="card-title">Technical Marketing</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">Semantic site structuring, structured data, tracking tags, and digital analytics.</p>
+              <a href="portfolio.html" class="btn btn-primary">View examples</a>
             </div>
           </div>
         </div>
         <div class="col-sm">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./assets/images/mobile-devices-img1-for-portfolio.png" class="card-img-top" alt="digital media houston">
             <div class="card-body">
               <h5 class="card-title">Digital Media</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">Engaging digital design exceeding your integrated media expectations.</p>
+              <a href="portfolio.html" class="btn btn-primary">View examples</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!--Main Content-->
-      <section class="container intro">
-          <h1 id="headline">Seeking Entry Level Software Developer Jobs in Houston, TX</h1>
-          <img src="./assets/images/malcolm-barnes-developer.png" class="rounded float-right" alt="malcolm barnes seo developer">
-          <p>Welcome to my site! I'm Malcolm Barnes. As a recent graduate of the 
-            University of Texas Coding Bootcamp, I am seeking <b>entry level software developer jobs in Houston, TX</b>. 
-            <br><br>As an IT professional of over 15 years, 
-              I am familiar with the benefits and the challenges 
-              that technology can bring to the workplace. With the last 5 years
-               in the digital marketing and design space, I have gained an aesthetic and analytical perspective. 
-              As I expand into web development, I will bring my skills in marketing and design to create 
-          and help create applications in the marketing space. </p>
-          <ul>
-              <li><strong>University of Houston</strong> - BS, Digital Media Design ('17)</li>
-              <li><strong>University of Texas</strong> - Certificate, Web Development (<em>In-progress</em>)</li>
-          </ul>
-      </section>
     </main>
     <footer class="py-4 bg-dark text-white-50 py-5 fixed-bottom">
       <small>Copyright 2020 &copy; Malcolm Barnes Tech</small>
