--- a/portfolio.html
+++ b/portfolio.html
@@ -50,12 +50,21 @@
         </div>
       </div>
     <!--Main Content-->
-      <section class="container-lg">
-          <div class="row">
-              
-          </div>
-          <div class="row"></div>
-          <div class="row"></div>
+        <section class="container portfolio">
+            <div class="row">
+              <div class="col-sm">
+                <p class="proj-descr-hl">Semantic HTML Project</p><a href=""><img src="./assets/images/HTML5_logo-200x200.png" alt="html5 logo" class="img-thumbnail"></a>
+                <p id="proj-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, distinctio. Minima aspernatur explicabo tempora sunt voluptate aliquid dolor saepe consequatur est quod vitae alias modi quo, numquam eius autem dignissimos.</p>
+              </div>
+              <div class="col-sm">
+                <p class="proj-descr-hl">Personal Portfolio Project</p><a href=""><img src="./assets/images/CSS3_HTML5_logos.png" alt="html5 css logo" class="img-thumbnail"></a>
+                <p id="proj-descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae aliquam eaque iste amet eos laudantium, accusantium iusto ducimus aperiam odio recusandae et non nemo hic quo sapiente provident in quia?</p>
+              </div>
+              <div class="col-sm">
+                <p class="proj-descr-hl">Password Generator Project</p><a href=""><img src="./assets/images/html5-js-css3-logo.png" alt="html css javascript logo" class="img-thumbnail"></a>
+                <p id="proj-descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae aliquam eaque iste amet eos laudantium, accusantium iusto ducimus aperiam odio recusandae et non nemo hic quo sapiente provident in quia?</p>
+              </div>
+            </div>
      </section>
       <!--Services-->
     <div class="container">
