Portfolio page complete.

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,19 +53,34 @@
         <section class="container portfolio">
             <div class="row">
               <div class="col-sm">
-                <p class="proj-descr-hl">Semantic HTML Project</p><a href=""><img src="./assets/images/HTML5_logo-200x200.png" alt="html5 logo" class="img-thumbnail"></a>
-                <p id="proj-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, distinctio. Minima aspernatur explicabo tempora sunt voluptate aliquid dolor saepe consequatur est quod vitae alias modi quo, numquam eius autem dignissimos.</p>
+                <p class="proj-descr-hl">Semantic HTML Project</p><a href="https://barnes-malcolm.github.io/horiseon-html/" target="_blank"><img src="./assets/images/HTML5_logo-200x200.png" alt="html5 logo" class="img-thumbnail"></a>
+                <p id="proj-descr">The purpose of this project was to optimize legacy HTML code
+                     to HTML5 using semantic tags for search engines and digital assistants to 
+                     better understand the meaning of the content on webpages.</p>
+                     <div class="container">
+                        <a href="https://barnes-malcolm.github.io/horiseon-html/"><button class="button">Click here</button></a>
+                     </div>
               </div>
               <div class="col-sm">
-                <p class="proj-descr-hl">Personal Portfolio Project</p><a href=""><img src="./assets/images/CSS3_HTML5_logos.png" alt="html5 css logo" class="img-thumbnail"></a>
-                <p id="proj-descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae aliquam eaque iste amet eos laudantium, accusantium iusto ducimus aperiam odio recusandae et non nemo hic quo sapiente provident in quia?</p>
+                <p class="proj-descr-hl">Personal Portfolio Project</p><a href="https://barnes-malcolm.github.io/my-portfolio/"><img src="./assets/images/CSS3_HTML5_logos.png" alt="html5 css logo" class="img-thumbnail"></a>
+                <p id="proj-descr">The purpose of this project was to use HTML5, CSS3, and Bootstrap
+                     to create a responsive, personal portfolio website. Additionally, Adobe 
+                     Photoshop was used to optimize the images for web.</p>
+                <div class="container">
+                    <a href="https://barnes-malcolm.github.io/my-portfolio/"></a><button class="button">Click here</button></a>
+                </div>
               </div>
               <div class="col-sm">
-                <p class="proj-descr-hl">Password Generator Project</p><a href=""><img src="./assets/images/html5-js-css3-logo.png" alt="html css javascript logo" class="img-thumbnail"></a>
-                <p id="proj-descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae aliquam eaque iste amet eos laudantium, accusantium iusto ducimus aperiam odio recusandae et non nemo hic quo sapiente provident in quia?</p>
+                <p class="proj-descr-hl">Password Generator Project</p><a href="#"><img src="./assets/images/html5-js-css3-logo.png" alt="html css javascript logo" class="img-thumbnail"></a>
+                <p id="proj-descr">The purpose of this porject is to create a password 
+                    generating application that generates complex passwords when prompted. The primary language used to create this application is Javascript.</p>
+                <div class="container">
+                    <a href="#"><button class="button">Click here</button></a> 
+                </div>
+                </div>
               </div>
             </div>
-     </section>
+        </section>
       <!--Services-->
     <div class="container">
     </div>
