--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
 <header>
-    <!-- Navigation begins     <nav class="navbar navbar-expand-lg navbar-light bg-light bd-navbar">
-  -->
+    <!-- Navigation begins-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-navbar">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="https://barnes-malcolm.github.io/my-portfolio/">
       <img src="./assets/images/MB_logo_fb pg img.png" width="36" height="36" class="d-inline-block align-top" alt="malcolm barnes technology houston">
       Malcolm<b>Barnes</b>
     </a>
