Contact page is complete. This project is complete.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Malcolm Barnes provides SEO and web development in Houston, TX.">
-    <title>Malcolm Barnes | SEO Developer | Marketing and Media</title>
+    <title>Malcolm Barnes | SEO Developer in Houston</title>
     <!--Stylesheets-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css" type="text/css">
@@ -19,7 +19,7 @@
 <header>
     <!-- Navigation begins-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-navbar">
-    <a class="navbar-brand" href="https://barnes-malcolm.github.io/my-portfolio/">
+    <a class="navbar-brand" href="index.html">
       <img src="./assets/images/MB_logo_fb pg img.png" width="36" height="36" class="d-inline-block align-top" alt="malcolm barnes technology houston">
       Malcolm<b>Barnes</b>
     </a>
@@ -29,13 +29,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link ft-color" href="./index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link ft-color" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class= "nav-link" href="./portfolio.html">Portfolio</a>
+            <a class= "nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
