--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Malcolm Barnes provides SEO and web development in Houston, TX.">
-    <title>Malcolm Barnes | SEO Developer | Marketing and Media</title>
+    <title>Portfolio | Malcolm Barnes | SEO Developer in Houston</title>
     <!--Stylesheets-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css" type="text/css">
@@ -17,10 +17,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
 <header>
-    <!-- Navigation begins     <nav class="navbar navbar-expand-lg navbar-light bg-light bd-navbar">
-  -->
+    <!-- Navigation begins-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-navbar">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="./index.html">
       <img src="./assets/images/MB_logo_fb pg img.png" width="36" height="36" class="d-inline-block align-top" alt="malcolm barnes technology houston">
       Malcolm<b>Barnes</b>
     </a>
@@ -30,26 +29,26 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link ft-color" href="./index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link ft-color" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class= "nav-link" href="./portfolio.html">Portfolio</a>
+            <a class= "nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
     <!-- Navigation ends-->
 </header>
+    <!--Main Content-->
   <body>
     <main class="container-fluid">
         <div class="col tagline">
         <p>Portfolio</p>
         </div>
       </div>
-    <!--Main Content-->
         <section class="container portfolio">
             <div class="row">
               <div class="col-sm">
@@ -81,9 +80,6 @@
               </div>
             </div>
         </section>
-      <!--Services-->
-    <div class="container">
-    </div>
     </main>
     <footer class="py-4 bg-dark text-white-50 py-5 fixed-bottom">
       <small>Copyright 2020 &copy; Malcolm Barnes Tech</small>
