Final edit and push for submission of deliverable

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section class="container-lg intro">
           <h1 id="headline">Seeking Entry Level Web Developer Jobs in Houston, TX</h1>
           <img src="./assets/images/malcolm-barnes-developer.png" class="rounded float-right" alt="malcolm barnes seo developer">
-          <p>Welcome to my site! I'm Malcolm Barnes. As a recent graduate of the 
+          <p>Welcome to my site! I'm Malcolm Barnes. As a soon-to-be graduate of the 
             University of Texas Coding Bootcamp, I am seeking <b>entry level web developer jobs in Houston, TX</b>.</p>
             <div class="row">
               <div class="col">
