--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
                      to HTML5 using semantic tags for search engines and digital assistants to 
                      better understand the meaning of the content on webpages.</p>
                      <div class="container">
-                        <a href="https://barnes-malcolm.github.io/horiseon-html/"><button class="button">Click here</button></a>
+                        <a href="https://barnes-malcolm.github.io/horiseon-html/" target="_blank"><button class="button">Click here</button></a>
                      </div>
               </div>
               <div class="col-sm">
@@ -66,7 +66,7 @@
                      to create a responsive, personal portfolio website. Additionally, Adobe 
                      Photoshop was used to optimize the images for web.</p>
                 <div class="container">
-                    <a href="https://barnes-malcolm.github.io/my-portfolio/"></a><button class="button">Click here</button></a>
+                    <a href="https://barnes-malcolm.github.io/my-portfolio/ " target="_blank"></a><button class="button">Click here</button></a>
                 </div>
               </div>
               <div class="col-sm">
