Changed button colors.

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
   <body>
     <main class="container-fluid">
         <div class="col tagline">
-        <p>Contact</p>
+        <p>Contact Malcolm</p>
         </div>
       </div>
     <!--Main Content-->
@@ -70,7 +70,7 @@
                       <label for="inputMsg">Inquiries</label>
                       <input type="text" class="form-control" id="inputMsg" placeholder="How can I help you?">
                     </div>
-                    <a href="mailto:barnes.malcolm@gmail.com" target="_blank"><button class="btn-primary">Contact me!</button></a>
+                    <a href="mailto:barnes.malcolm@gmail.com" target="_blank"><button class="btn btn-primary">Contact me!</button></a>
                   </form>
                 </div>
         </section>
