--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                 </tbody>
               </table>
             </div>
+            </div>
+            <div class="row">
+              <a href="#"><button class="btn btn-primary">Contact me</button></a>
             </div> 
       </section>
       <!--Services-->
