--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
   <body>
     <main class="container-fluid">
         <div class="col tagline">
-        <p>Portfolio</p>
+        <p>My Portfolio</p>
         </div>
       </div>
         <section class="container portfolio">
@@ -57,7 +57,7 @@
                      to HTML5 using semantic tags for search engines and digital assistants to 
                      better understand the meaning of the content on webpages.</p>
                      <div class="container">
-                        <a href="https://barnes-malcolm.github.io/horiseon-html/" target="_blank"><button class="button">Click here</button></a>
+                        <a href="https://barnes-malcolm.github.io/horiseon-html/" target="_blank"><button class="btn button">Click here</button></a>
                      </div>
               </div>
               <div class="col-sm">
@@ -66,7 +66,7 @@
                      to create a responsive, personal portfolio website. Additionally, Adobe 
                      Photoshop was used to optimize the images for web.</p>
                 <div class="container">
-                    <a href="https://barnes-malcolm.github.io/my-portfolio/ " target="_blank"></a><button class="button">Click here</button></a>
+                    <a href="https://barnes-malcolm.github.io/my-portfolio/ " target="_blank"></a><button class="btn button">Click here</button></a>
                 </div>
               </div>
               <div class="col-sm">
@@ -74,7 +74,7 @@
                 <p id="proj-descr">The purpose of this porject is to create a password 
                     generating application that generates complex passwords when prompted. The primary language used to create this application is Javascript.</p>
                 <div class="container">
-                    <a href="#"><button class="button">Click here</button></a> 
+                    <a href="#"><button class="btn button">Click here</button></a> 
                 </div>
                 </div>
               </div>
