Added hero image to the homepage.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <main class="container-fluid">
         <div class="col tagline">
         <p>Providing Results-driven Solutions from Ideation to Execution</p>
+        <div class="hero"></div>
         </div>
       </div>
     <!--Main Content-->
