--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
 <header>
-    <!-- Navigation begins     <nav class="navbar navbar-expand-lg navbar-light bg-light bd-navbar">
+    <!-- Navigation begins">
   -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-navbar">
     <a class="navbar-brand" href="index.html">
