Reformatted hero image orientation, changed h1 text. Deleted paragrapgh with personal image on homepage

--- a/index.html
+++ b/index.html
@@ -43,55 +43,15 @@
     <!-- Navigation ends-->
 </header>
   <body>
-    <main class="container-fluid">
-        <div class="col tagline">
-        <p>Providing Results-driven Solutions from Ideation to Execution</p>
-        <div class="hero"></div>
-        </div>
+    <div class="col tagline">
+      <p>Providing Results-driven Solutions from Ideation to Execution</p>
       </div>
-    <!--Main Content-->
-      <section class="container-lg intro">
-          <h1 id="headline">Seeking Entry Level Web Developer Jobs in Houston, TX</h1>
-          <img src="./assets/images/malcolm-barnes-developer.png" class="rounded float-right" alt="malcolm barnes seo developer">
-          <p>Welcome to my site! I'm Malcolm Barnes. As a soon-to-be graduate of the 
-            University of Texas Coding Bootcamp, I am seeking <b>entry level web developer jobs in Houston, TX</b>.</p>
-            <div class="row">
-              <div class="col">
-              <p>As an IT professional of over 15 years, 
-              I am familiar with the benefits and the challenges 
-              that technology can bring to the workplace. With the last 5 years
-               in the digital marketing and design space, I have gained an aesthetic and analytical perspective. 
-              As I expand into web development, I will bring my skills in marketing and design to create 
-          and help create applications in the technology space.</p>
-              </div>
-            <div class="col">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col row-tb"></th>
-                    <th scope="col">Web Development</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row row-tb"></th>
-                    <td>Responsive Design</td>
-                  </tr>
-                  <tr>
-                    <th scope="row row-tb"></th>
-                    <td>Semantic Structure</td>
-                  </tr>
-                  <tr>
-                    <th scope="row row-tb"></th>
-                    <td>MERN Stack</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            </div>
-            <div class="row">
-              <a href="#"><button class="btn btn-primary">Contact me</button></a>
-            </div> 
+      <div class="hero"></div>
+    <!--Main Content-->  
+    <main>        
+      <section class="headline-div">
+          <h1 id="headline">It's easy with Malcolm.</h1>
+          <h4>Full-stack web development with two goals: optimize every user's experience,<br> and create real impact for my clients.</h4>
       </section>
       <!--Services-->
     <div class="container services">
