--- a/index.html
+++ b/index.html
@@ -47,13 +47,22 @@
       <p>Providing Results-driven Solutions from Ideation to Execution</p>
       </div>
       <div class="hero"></div>
-    <!--Main Content-->  
-    <main>        
+<!--Main Content-->  
+    <main>
+    <!--Headline Div-->        
       <section class="headline-div">
           <h1 id="headline">It's easy with Malcolm.</h1>
           <h4>Full-stack web development with two goals: optimize every user's experience,<br> and create real impact for my clients.</h4>
+      <div class="row headline-img">
+        <div class="col"><img src="./assets/images/development.png" alt="web development" height="200" width="200"></div>
+        <div class="col"></div>
+        <div class="col"></div><img src="" alt="">
+        <div class="col"></div><img src="" alt="">
+      </div>
       </section>
-      <!--Services-->
+    <!--Headline Div-->
+
+    <!--Services-->
     <div class="container services">
       <div class="row">
         <div id="headline" class="container btn-headline">Click below to view my portfolio:</div>
