--- a/index.html
+++ b/index.html
@@ -54,10 +54,20 @@
           <h1 id="headline">It's easy with Malcolm.</h1>
           <h4>Full-stack web development with two goals: optimize every user's experience,<br> and create real impact for my clients.</h4>
       <div class="row headline-img">
-        <div class="col"><img src="./assets/images/development.png" alt="web development" height="200" width="200"></div>
+        <div class="col"><img src="./assets/images/development.png" alt="malcolm barnes web development houston" height="100" width="100"></div>
+        <div class="col"><img src="./assets/images/ecommerce.png" alt="malcolm barnes digital marketing houston" height="100" width="100"></div>
+        <div class="col"><img src="./assets/images/media.png" alt="malcolm barnes digital media houston" height="100" width="100"></div>
         <div class="col"></div>
-        <div class="col"></div><img src="" alt="">
-        <div class="col"></div><img src="" alt="">
+        <div class="col"></div>
+      </div>
+      <div class="row">
+        <div class="col">Web Development</div>
+        <div class="col">Digital Marketing</div>
+        <div class="col">Integrated Media</div>
+        <div class="col"></div>
+        <div class="col"></div>
+
+
       </div>
       </section>
     <!--Headline Div-->
