--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Malcolm Barnes | SEO Developer in Houston</title>
     <!--Stylesheets-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Rajdhani:wght@400;500;700&display=swap" rel="stylesheet">
     <!--Bootstrap JS-->
@@ -44,15 +44,15 @@
 </header>
   <body>
     <div class="col tagline">
-      <p>Providing Results-driven Solutions from Ideation to Execution</p>
+      <p>I Provide Results-driven Solutions from Ideation to Execution</p>
       </div>
       <div class="hero"></div>
 <!--Main Content-->  
     <main>
     <!--Headline Div-->        
       <section class="headline-div">
-          <h1 id="headline">It's easy with Malcolm.</h1>
-          <h4>Full-stack web development with two goals: optimize every user's experience,<br> and create real impact for my clients.</h4>
+          <h1 id="headline">It's simple with Malcolm.</h1>
+          <h4 class="headline-p">Full-stack web development with two goals: optimize every user's experience,<br> and create real impact for my clients.</h4>
       <div class="row headline-img">
         <div class="col"><img src="./assets/images/development.png" alt="malcolm barnes web development houston" height="100" width="100"></div>
         <div class="col"><img src="./assets/images/ecommerce.png" alt="malcolm barnes digital marketing houston" height="100" width="100"></div>
@@ -60,10 +60,10 @@
         <div class="col"></div>
         <div class="col"></div>
       </div>
-      <div class="row">
-        <div class="col">Web Development</div>
-        <div class="col">Digital Marketing</div>
-        <div class="col">Integrated Media</div>
+      <div class="row" id="headline-srvcs">
+        <div class="col">01. Web Development</div>
+        <div class="col">02. Technical Marketing</div>
+        <div class="col">03. Integrated Media</div>
         <div class="col"></div>
         <div class="col"></div>
 
@@ -75,36 +75,18 @@
     <!--Services-->
     <div class="container services">
       <div class="row">
-        <div id="headline" class="container btn-headline">Click below to view my portfolio:</div>
-        <div class="col-sm">
-          <div class="card">
-            <img src="./assets/images/code-img3-for-portfolio.png" class="card-img-top" alt="web developer">
-            <div class="card-body">
-              <h5 class="card-title">Web Development</h5>
-              <p class="card-text">From simple mini-sites to complex data-driven web applications.</p>
-              <a href="portfolio.html" class="btn btn-primary">View examples</a>
-            </div>
-          </div>
+        <div class="team"></div>
+      </div>
+    </div>
+
+    <div class="container wood-button">
+      <div class="row">
+        <div class="col">
         </div>
-        <div class="col-sm">
-          <div class="card">
-            <img src="./assets/images/digital-marketing-img2-for-portfolio.png" class="card-img-top" alt="technical seo houston">
-            <div class="card-body">
-              <h5 class="card-title">Technical Marketing</h5>
-              <p class="card-text">Semantic site structuring, structured data, tracking tags, and digital analytics.</p>
-              <a href="portfolio.html" class="btn btn-primary">View examples</a>
-            </div>
-          </div>
+        <div class="col-5">
         </div>
-        <div class="col-sm">
-          <div class="card">
-            <img src="./assets/images/mobile-devices-img1-for-portfolio.png" class="card-img-top" alt="digital media houston">
-            <div class="card-body">
-              <h5 class="card-title">Digital Media</h5>
-              <p class="card-text">Engaging digital design exceeding your integrated media expectations.</p>
-              <a href="portfolio.html" class="btn btn-primary">View examples</a>
-            </div>
-          </div>
+        <div class="col">
+          <button type="button" class="btn btm-btn">Getting Started ></button>
         </div>
       </div>
     </div>
