--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Contact | Malcolm Barnes | SEO Developer in Houston</title>
     <!--Stylesheets-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/style.css" type="text/css">
+    <link rel="stylesheet" href="./style.css" type="text/css">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Rajdhani:wght@400;500;700&display=swap" rel="stylesheet">
     <!--Bootstrap JS-->
