--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="col-5">
         </div>
         <div class="col">
-          <button type="button" class="btn btm-btn">Getting Started ></button>
+          <a href="./contact.html"><button type="button" class="btn btm-btn">Getting Started ></button></a>
         </div>
       </div>
     </div>
