Updated portfolio page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
     </div>
     </main>
-    <footer class="py-4 bg-dark text-white-50 py-5 fixed-bottom">
+    <footer class="py-4 bg-dark text-white-50 fixed-bottom">
       <small>Copyright 2020 &copy; Malcolm Barnes Tech</small>
     </footer>
   </body>
